--- a/upload-service/package.json
+++ b/upload-service/package.json
@@ -20,7 +20,6 @@
   },
   "devDependencies": {
     "aws-sdk": "^2.7.10",
-    "copy-webpack-plugin": "^3.0.1",
     "eslint": "^3.3.1",
     "eslint-config-airbnb": "^10.0.1",
     "eslint-config-airbnb-base": "^5.0.2",
@@ -32,9 +31,7 @@
     "license-checker": "^8.0.3",
     "node-yaml": "^3.0.3",
     "serverless-mocha-plugin": "^1.3.4",
-    "serverless-offline": "^3.2.1",
-    "serverless-webpack": "^1.0.0-rc.3",
-    "webpack-node-externals": "^1.5.4"
+    "serverless-offline": "^3.2.1"
   },
   "scripts": {
     "server": "node node_modules/.bin/http-server www",
