--- a/upload-service/serverless.yml
+++ b/upload-service/serverless.yml
@@ -5,7 +5,7 @@ service: et-upload-service # NOTE: update this with your service name
 provider:
   name: aws
   runtime: nodejs10.x
-  region: us-east-1
+  region: eu-west-2
   environment:
     SERVERLESS_STAGE: ${opt:stage, self:provider.stage}
     SERVERLESS_PROJECT: ${self:service}
