--- a/video-service/package.json
+++ b/video-service/package.json
@@ -16,7 +16,11 @@
     "bluebird": "^3.5.0",
     "fs-extra": "^2.1.2",
     "moment": "^2.18.1",
-    "node-fetch": "^1.6.3"
+    "node-fetch": "^1.6.3",
+    "serverless-step-functions": "^2.17.1",
+    "watchtower-log-ingestion": "^1.10.1",
+    "watchtower-monitor": "^1.8.3",
+    "watchtower-recorder": "^2.4.0"
   },
   "devDependencies": {
     "aws-sdk": "^2.7.10",
