--- a/upload-service/serverless.yml
+++ b/upload-service/serverless.yml
@@ -7,6 +7,10 @@ provider:
   runtime: nodejs10.x
   region: eu-west-2
   environment:
+    WATCHTOWER_EVENT_KINESIS_STREAM:
+      Fn::ImportValue: watchtower-events-kinesis-stream
+    # DEBUG_WATCHTOWER: 1    # Produces verbose debug prints
+    # PROFILE_WATCHTOWER: 1  # Produces timing information
     SERVERLESS_STAGE: ${opt:stage, self:provider.stage}
     SERVERLESS_PROJECT: ${self:service}
     SERVERLESS_REGION: ${opt:region, self:provider.region}
@@ -17,6 +21,13 @@ provider:
     RENDER_BUCKET:
       Fn::ImportValue: video-service-render-bucket-${self:provider.environment.SERVERLESS_STAGE}
   iamRoleStatements:
+    - Effect: Allow             # Required for writing wt events
+      Action:
+        - 'kinesis:DescribeStream'
+        - 'kinesis:PutRecord'
+        - 'kinesis:PutRecords'
+      Resource:
+        Fn::ImportValue: watchtower-events-kinesis-stream-arn
     - Effect: Allow
       Action:
       - S3:ListBucket
@@ -38,11 +49,11 @@ package:
 
 functions:
   status:
-    handler: status/index.handler
+    handler: status/index${self:custom.handlerFilePostfix}.handler
     events:
       - sns: arn:aws:sns:${self:provider.environment.SERVERLESS_REGION}:${self:custom.secrets.ACCOUNT}:video-render-ready-topic-${opt:stage, self:provider.stage} # fn import value not yet working in serverless
   get-metadata:
-    handler: get-metadata/index.handler
+    handler: get-metadata/index${self:custom.handlerFilePostfix}.handler
     events:
       - http:
           path: metadata/{session}
@@ -50,7 +61,7 @@ functions:
           cors: true
     timeout: 30
   signed-url:
-    handler: signed-url/index.handler
+    handler: signed-url/index${self:custom.handlerFilePostfix}.handler
     events:
       - http:
           path: signed-url
@@ -66,6 +77,9 @@ custom:
   serverless-mocha-plugin:
     functionTemplate: templates/function.ejs
   secrets: ${file(../.secrets.yml)}
+  # handlerFilePostfix: '-wrapper'
+  # handlerFilePostfix: ''
+  handlerFilePostfix: ${env:WT_RUN_NO_RECORDING, '-wrapper'}
 
 resources:
   Resources:
