--- a/video-service/serverless.yml
+++ b/video-service/serverless.yml
@@ -124,6 +124,16 @@ stepFunctions:
 resources:
   Outputs:
     WTCheckerMachine: ${file(watchtower/outputs.yml):Outputs.WTCheckerMachine}
+    WTEventsKinesisStream:
+      Value:
+        Ref: EventsStream
+      Export:
+        Name: watchtower-events-kinesis-stream
+    WTEventsKinesisStreamARN:
+      Value:
+        Fn::GetAtt: [EventsStream, Arn]
+      Export:
+        Name: watchtower-events-kinesis-stream-arn
     RenderBucket:
       Value:
         Ref: RenderBucket
