--- a/upload-service/serverless.yml
+++ b/upload-service/serverless.yml
@@ -9,7 +9,7 @@ provider:
   environment:
     WATCHTOWER_EVENT_KINESIS_STREAM:
       Fn::ImportValue: watchtower-events-kinesis-stream
-    # DEBUG_WATCHTOWER: 1    # Produces verbose debug prints
+    DEBUG_WATCHTOWER: 1    # Produces verbose debug prints
     # PROFILE_WATCHTOWER: 1  # Produces timing information
     SERVERLESS_STAGE: ${opt:stage, self:provider.stage}
     SERVERLESS_PROJECT: ${self:service}
